@@ -1,11 +1,11 @@
 HOSTS:
-  el7-system:
+  oel7:
     roles:
       - server
       - default
       - master
     platform:   el-7-x86_64
-    box:        centos/7
+    box:        elastic/oel-7-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -13,11 +13,11 @@ HOSTS:
         gpgkeys:
           - https://getfedora.org/static/352C64E5.txt
 
-  el6-system:
+  oel6:
     roles:
       - client
     platform:   el-6-x86_64
-    box:        centos/6
+    box:        elastic/oel-6-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -29,4 +29,5 @@ CONFIG:
   log_level: verbose
   type:      aio
   vagrant_memsize: 256
+  puppet_collection: puppet5
   # vb_gui: true
